--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
-    "express": "^4.16.4",
+    "express": "^4.17.1",
     "hbs": "~4.0.4",
     "http-errors": "~1.6.3",
-    "morgan": "~1.9.1"
+    "mongoose": "^5.13.3",
+    "morgan": "~1.9.1",
+    "nodemon": "^2.0.12"
   }
 }
